--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
+    "jquery": "^3.6.0",
     "node-sass": "^5.0.0"
   }
 }
