--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile_scss": "node-sass --watch scss -o css"
+    "compile_scss": "node-sass --watch assets/scss -o assets/css"
   },
   "author": "Maximilian Petkov",
   "license": "ISC",
